# recyclobot

./: .gitignore  .pre-commit-config.yaml  CORRECTED_IMPLEMENTATION.md  CORRECT_USAGE_GUIDE.md  CRITICAL_FIXES_SUMMARY.md  DATASET_FORMAT_ANALYSIS.md  FINAL_ANALYSIS.md  FINAL_DATASET_CORRECTIONS.md  FINAL_SUMMARY.md  IMPLEMENTATION_ISSUES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  PR_DESCRIPTION.md  QUICK_INFERENCE_GUIDE.md  QUICK_REFERENCE_CARD.md  QUICK_START_GPU.sh  README.md  README_PROJECT_STRUCTURE.md  README_RECYCLOBOT.md  REAL_ARM_CONNECTION_GUIDE.md  ROBOT_TESTING_GUIDE.md  SETUP_FOR_YOUR_GPU.md  SETUP_GPU_SIMULATION.md  SIMULATION_GUIDE.md  SMOLVLA_FIX_SUMMARY.md  SMOLVLA_IMPLEMENTATION_CORRECTION.md  UPDATE_SUMMARY.md  check_features.py  check_smolvla_imports.py  demo_editable_install.py  diagnose_stats_issue.py  find_stats_class.py  pyproject.toml  pyproject.toml.example  quick_setup.sh  quick_test.sh  quick_validate.py  recycling_tasks.json  requirements.txt  (+10 more)
.github/workflows/: python.yml  test.yml
docs/: architecture.md
examples/: run_recyclobot_demo.py  run_recyclobot_gym_demo.py
recyclobot/: __init__.py  config.yaml
recyclobot/control/: __init__.py  adapters.py  skill_runner.py
recyclobot/logging/: __init__.py  dataset_logger.py
scripts/: collect_recyclobot_dataset.py  collect_recyclobot_dataset_v2.py  collect_recyclobot_dataset_v3.py  evaluate_recyclobot.py  record_recyclobot_teleoperated.py  train_recyclobot.py
tests/: test_logger_roundtrip.py  test_openai_planner.py  test_planner_json.py  test_policy_load.py  test_state_adapter.py
(+7 files in other folders)
