[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recyclobot"
version = "0.1.0"
description = "Vision-Language Planning for Robotic Waste Sorting with LeRobot"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.23.0",
    "pillow>=9.0",
    "lerobot[smolvla,feetech] @ git+https://github.com/huggingface/lerobot.git@main",
    "google-generativeai>=0.3.0",
    "transformers[vision]>=4.44.0",
    "accelerate>=0.26.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "pre-commit>=2.0",
]
qwen = [
    "bitsandbytes>=0.41.0",
]

[project.scripts]
recyclobot-demo = "examples.run_recyclobot_demo:main"
recyclobot-collect = "scripts.collect_recyclobot_dataset:main"
recyclobot-train = "scripts.train_recyclobot:main"
recyclobot-eval = "scripts.evaluate_recyclobot:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100